basic build serve web component

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "serve:wc": "serve ./web-components",
+    "build:wc": "vue-cli-service build --target wc --name my-component ./src/components/organisms/NotificationGroup.vue --dest ./web-components/dist"
   },
   "dependencies": {
     "axios": "^0.19.2",
