--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vuex": "^3.1.3"
   },
   "devDependencies": {
+    "@linusborg/vue-simple-portal": "^0.1.4",
     "@vue/cli-plugin-babel": "^4.3.0",
     "@vue/cli-plugin-eslint": "^4.3.0",
     "@vue/cli-plugin-unit-jest": "^4.3.0",
