--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,20 @@
 {
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "editor.formatOnSave": false,
+  "[typescript]": {
+    "editor.formatOnSave": false
+  },
   "conventionalCommits.scopes": [
-    "project"
+    "project",
+    "release",
+    "client",
+    "ui",
+    "embed",
+    "services",
+    "helpers",
+    "infrastructure",
+    "examples"
   ]
 }
