feat(client): begin work notification fetching

--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "dependencies": {
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0"
   }
 }
