--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@academydistrict20/notifications",
+  "name": "@asd20/notifications",
   "version": "0.1.0",
   "description": "Tools for notifications",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "jest",
-    "release": "lerna exec --concurrency 1 -- npx --no-install semantic-release -e semantic-release-monorepo"
+    "release": "lerna exec --concurrency 1 -- npx --no-install semantic-release -e semantic-release-monorepo --tag-format='${LERNA_PACKAGE_NAME}-v\\${version}'"
   },
   "repository": {
     "type": "git",
