--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,12 @@
 {
+  "version": "0.1.0",
+  "npmClient": "npm",
   "packages": [
     "packages/*"
   ],
-  "version": "0.0.0"
+  "command": {
+    "publish": {
+      "ignoreChanges": ["./docs/**/*"]
+    }
+  }
 }
