--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "access": "public"
   },
   "scripts": {
-    "test": "jest",
-    "release": "lerna exec --concurrency 1 -- npx --no-install semantic-release -e semantic-release-monorepo --tag-format='${LERNA_PACKAGE_NAME}-v\\${version}'"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -27,14 +26,28 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/jest": "^25.2.1",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
+    "bili": "^4.10.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
+    "jest": "^26.0.1",
     "lerna": "^3.20.2",
-    "semantic-release": "^17.0.7",
-    "semantic-release-monorepo": "^7.0.2"
+    "lint-staged": "^10.2.2",
+    "prettier": "^2.0.5",
+    "rollup-plugin-typescript2": "^0.27.0",
+    "ts-jest": "^25.4.0",
+    "typescript": "^3.8.3"
   },
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "dependencies": {
+    "@asd20/notifications-helpers": "file:packages/shared"
   }
 }
