ci(release): setup auto

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@asd20/notifications",
-  "version": "0.1.0",
+  "version": "1.2.1",
   "description": "Tools for notifications",
   "main": "index.js",
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "release": "auto shipit"
   },
   "repository": {
     "type": "git",
@@ -24,11 +25,14 @@
   },
   "homepage": "https://github.com/academydistrict20/notifications#readme",
   "devDependencies": {
+    "@auto-it/conventional-commits": "^9.32.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/jest": "^25.2.1",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
+    "all-contributors-cli": "^6.14.2",
+    "auto": "^9.32.0",
     "bili": "^4.10.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
@@ -49,5 +53,13 @@
   },
   "dependencies": {
     "@asd20/notifications-helpers": "file:packages/shared"
+  },
+  "auto": {
+    "plugins": [
+      "npm",
+      "conventional-commits",
+      "released"
+    ],
+    "onlyPublishWithReleaseLabel": true
   }
 }
