ci(templates): add access public default

--- a/_templates/package/new/package.json
+++ b/_templates/package/new/package.json
@@ -12,6 +12,9 @@ to: packages/<%= h.changeCase.snake(pkg) %>/package.json
     "type": "git",
     "url": "git+https://github.com/academydistrict20/notifications.git"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "bugs": {
     "url": "https://github.com/academydistrict20/notifications/issues"
   },
