--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -59,7 +59,9 @@
     "vue": "^2.6.11"
   },
   "dependencies": {
-    "@vue/web-component-wrapper": "^1.2.0"
+    "@vue/web-component-wrapper": "^1.2.0",
+    "cookie-storage": "^6.0.0",
+    "lodash": "^4.17.15"
   },
   "husky": {
     "hooks": {
@@ -72,5 +74,8 @@
       "eslint --cache --fix",
       "git add"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash-es": "^4.17.3"
   }
 }
