--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,16 @@
     "infrastructure",
     "examples",
     "templates",
-    "source-plugins"
-  ]
+    "plugins"
+  ],
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/node_modules": true,
+    "**/_templates": true,
+    "**/coverage": true
+  }
 }
