--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/academydistrict20/notifications#readme",
   "devDependencies": {
     "@auto-it/conventional-commits": "^9.32.0",
+    "@babel/core": "^7.9.6",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/jest": "^25.2.1",
@@ -33,12 +34,15 @@
     "@typescript-eslint/parser": "^2.29.0",
     "all-contributors-cli": "^6.14.2",
     "auto": "^9.32.0",
+    "babel-jest": "^26.0.1",
+    "babel-preset-env": "^1.7.0",
     "bili": "^4.10.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
+    "jest-fetch-mock": "^3.0.3",
     "lerna": "^3.20.2",
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
