--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
     "**/.DS_Store": true,
     "**/node_modules": true,
     "**/_templates": true,
-    "**/coverage": true
+    "**/coverage": true,
+    "**/dist": true,
   }
 }
