--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "@babel/core": "^7.9.6",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-typescript": "^3.1.1",
     "@types/jest": "^25.2.1",
+    "@types/lodash": "^4.14.151",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "all-contributors-cli": "^6.14.2",
@@ -46,10 +51,13 @@
     "lerna": "^3.20.2",
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
-    "rollup-plugin-typescript2": "^0.27.0",
+    "rollup": "^2.10.3",
+    "rollup-plugin-typescript2": "^0.27.1",
     "rollup-plugin-vue": "^5.0.0",
     "ts-jest": "^25.4.0",
-    "typescript": "^3.8.3",
+    "tslib": "^2.0.0",
+    "typescript": "^3.9.2",
+    "vue-hot-reload-api": "^2.3.4",
     "vue-template-compiler": "^2.6.11"
   },
   "husky": {
@@ -58,7 +66,10 @@
     }
   },
   "dependencies": {
-    "@asd20/notifications-shared": "file:packages/shared"
+    "@asd20/notifications-embed": "file:packages/embed",
+    "@asd20/notifications-plugin-json": "file:packages/plugin-json",
+    "@asd20/notifications-shared": "file:packages/shared",
+    "@asd20/notifications-ui": "file:packages/ui"
   },
   "auto": {
     "plugins": [
