--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -82,6 +82,7 @@
   },
   "dependencies": {
     "@asd20/notifications-helpers": "file:../shared",
+    "@asd20/notifications-plugin-json": "file:../plugin-json",
     "@vue/web-component-wrapper": "^1.2.0"
   },
   "husky": {
