--- a/packages/ui/examples/vue-app/package.json
+++ b/packages/ui/examples/vue-app/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
+    "sass": "^1.26.5",
     "vue-hot-reload-api": "^2.3.4"
   }
 }
