--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,8 +27,10 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/node_modules": true,
-    "**/_templates": true,
+    "**/_templates": false,
     "**/coverage": true,
     "**/dist": true,
-  }
+  },
+
+  "jest.showCoverageOnLoad": true
 }
