--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "jest-fetch-mock": "^3.0.3",
+    "jest-localstorage-mock": "^2.4.2",
     "lerna": "^3.20.2",
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
