--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-typescript": "^3.1.1",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.151",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
@@ -53,11 +55,13 @@
     "lint-staged": "^10.2.2",
     "prettier": "^2.0.5",
     "rollup": "^2.10.3",
-    "rollup-plugin-typescript2": "^0.27.1",
+    "rollup-plugin-typescript2": "^0.27.0",
     "rollup-plugin-vue": "^5.0.0",
+    "semantic-release": "^17.0.7",
+    "semantic-release-monorepo": "^7.0.2",
     "ts-jest": "^25.4.0",
     "tslib": "^2.0.0",
-    "typescript": "^3.9.2",
+    "typescript": "^3.8.3",
     "vue-hot-reload-api": "^2.3.4",
     "vue-template-compiler": "^2.6.11"
   },
@@ -67,9 +71,10 @@
     }
   },
   "dependencies": {
+    "@asd20/notifications-client": "file:packages/client",
     "@asd20/notifications-embed": "file:packages/embed",
+    "@asd20/notifications-helpers": "file:packages/shared",
     "@asd20/notifications-plugin-json": "file:packages/plugin-json",
-    "@asd20/notifications-shared": "file:packages/shared",
     "@asd20/notifications-ui": "file:packages/ui"
   },
   "auto": {
