--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,11 +12,11 @@
   "bugs": {
     "url": "https://github.com/academydistrict20/notifications/issues"
   },
-  "main": "dist/asd20-notification-ui.cjs.js",
-  "module": "dist/asd20-notification-ui.esm.js",
-  "browser": "dist/asd20-notification-ui.esm.min.js",
-  "unpkg": "dist/asd20-notification-ui.umd.js",
-  "jsdelivr": "dist/asd20-notification-ui.umd.js",
+  "main": "dist/asd20-notifications-ui.cjs.js",
+  "module": "dist/asd20-notifications-ui.esm.js",
+  "browser": "dist/asd20-notifications-ui.esm.min.js",
+  "unpkg": "dist/asd20-notifications-ui.umd.js",
+  "jsdelivr": "dist/asd20-notifications-ui.umd.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist/*.js",
@@ -45,12 +45,12 @@
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "prepublishOnly": "npm run build",
     "build": "npm run build:esm && npm run build:esm:min && npm run build:cjs && npm run build:cjs:min && npm run build:umd && npm run build:umd:min",
-    "build:esm": "export BROWSERSLIST_ENV=modern && bili --banner -t browser --format esm --input.index src/index.ts --bundle-node-modules --file-name asd20-notification-ui.esm.js",
-    "build:esm:min": "export BROWSERSLIST_ENV=modern && bili --banner -t browser --format esm --input.index src/index.ts --bundle-node-modules --minify --file-name asd20-notification-ui.esm.min.js",
-    "build:cjs": "export BROWSERSLIST_ENV=compat && bili --banner -t browser --format cjs --input.index src/index.ts --file-name asd20-notification-ui.cjs.js",
-    "build:cjs:min": "export BROWSERSLIST_ENV=compat && bili --banner -t browser --format cjs --input.index src/index.ts --minify --file-name asd20-notification-ui.cjs.min.js",
-    "build:umd": "export BROWSERSLIST_ENV=compat && bili --banner -t browser --format umd --input.index src/index.ts --bundle-node-modules --module-name Asd20NotificationsUi --file-name asd20-notification-ui.umd.js",
-    "build:umd:min": "export BROWSERSLIST_ENV=compat && bili --banner -t browser --format umd --input.index src/index.ts --bundle-node-modules --module-name Asd20NotificationsUi --minify --file-name asd20-notification-ui.umd.min.js"
+    "build:esm": "export BROWSERSLIST_ENV=modern && bili --banner -t browser --format esm --input.index src/index.ts --bundle-node-modules --file-name asd20-notifications-ui.esm.js",
+    "build:esm:min": "export BROWSERSLIST_ENV=modern && bili --banner -t browser --format esm --input.index src/index.ts --bundle-node-modules --minify --file-name asd20-notifications-ui.esm.min.js",
+    "build:cjs": "export BROWSERSLIST_ENV=compat && bili --banner -t browser --format cjs --input.index src/index.ts --file-name asd20-notifications-ui.cjs.js",
+    "build:cjs:min": "export BROWSERSLIST_ENV=compat && bili --banner -t browser --format cjs --input.index src/index.ts --minify --file-name asd20-notifications-ui.cjs.min.js",
+    "build:umd": "export BROWSERSLIST_ENV=compat && bili --banner -t browser --format umd --input.index src/index.ts --bundle-node-modules --module-name Asd20NotificationsUi --file-name asd20-notifications-ui.umd.js",
+    "build:umd:min": "export BROWSERSLIST_ENV=compat && bili --banner -t browser --format umd --input.index src/index.ts --bundle-node-modules --module-name Asd20NotificationsUi --minify --file-name asd20-notifications-ui.umd.min.js"
   },
   "peerDependencies": {
     "vue": "^2.6.11"
