--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "husky": "4.2.5",
     "jest": "26.0.1",
     "jest-fetch-mock": "3.0.3",
+    "jest-localstorage-mock": "^2.4.2",
     "lerna": "3.21.0",
     "lint-staged": "10.2.4",
     "prettier": "2.0.5",
@@ -62,6 +63,7 @@
   "dependencies": {
     "@asd20/notifications-client": "file:packages/client",
     "@asd20/notifications-embed": "file:packages/embed",
+    "@asd20/notifications-plugin-azure-search": "file:packages/plugin-azure-search",
     "@asd20/notifications-plugin-cc-messages": "file:packages/plugin-cc-messages",
     "@asd20/notifications-plugin-json": "file:packages/plugin-json",
     "@asd20/notifications-shared": "file:packages/shared",
