--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -47,7 +47,7 @@
     "test:watch": "jest --watch-all --collect-coverage",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "semantic-release": "semantic-release",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly:disabled": "npm run build",
     "build": "npm run build:esm && npm run build:esm:min && npm run build:cjs && npm run build:cjs:min && npm run build:umd && npm run build:umd:min",
     "build:esm": "export BROWSERSLIST_ENV=modern && bili --banner -t browser --format esm --input.index src/index.ts --bundle-node-modules --file-name asd20-notifications-client.esm.js",
     "build:esm:min": "export BROWSERSLIST_ENV=modern && bili --banner -t browser --format esm --input.index src/index.ts --bundle-node-modules --minify --file-name asd20-notifications-client.esm.min.js",
@@ -77,5 +77,5 @@
       "git add"
     ]
   },
-  "gitHead": "e41b431dc208066be8212cafe3bfb41bd6a55b40"
+  "gitHead": "42c70e88883d1e818582c016f46d9527082e7b25"
 }
