--- a/packages/embed/package.json
+++ b/packages/embed/package.json
@@ -73,5 +73,8 @@
       "git add"
     ]
   },
-  "gitHead": "42c70e88883d1e818582c016f46d9527082e7b25"
+  "gitHead": "42c70e88883d1e818582c016f46d9527082e7b25",
+  "devDependencies": {
+    "rollup-plugin-internal": "^1.0.4"
+  }
 }
