--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
   "devDependencies": {
     "@auto-it/conventional-commits": "9.38.0",
     "@babel/core": "7.10.2",
+    "@babel/plugin-transform-runtime": "^7.10.1",
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
-    "@rollup/plugin-node-resolve": "8.0.0",
+    "@rollup/plugin-babel": "^5.0.3",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.1",
     "@rollup/plugin-typescript": "3.1.1",
     "@types/jest": "25.2.3",
     "@typescript-eslint/eslint-plugin": "3.1.0",
@@ -46,11 +49,16 @@
     "jest": "26.0.1",
     "jest-fetch-mock": "3.0.3",
     "jest-localstorage-mock": "2.4.2",
-    "lint-staged": "10.2.7",
     "lerna": "3.22.0",
+    "lint-staged": "10.2.7",
     "prettier": "2.0.5",
+    "rollup": "^2.15.0",
+    "rollup-plugin-css-only": "^2.1.0",
+    "rollup-plugin-internal": "^1.0.4",
+    "rollup-plugin-terser": "^6.1.0",
     "rollup-plugin-typescript2": "0.27.1",
-    "rollup-plugin-vue": "5.1.9",
+    "rollup-plugin-visualizer": "^4.0.4",
+    "rollup-plugin-vue": "^5.1.9",
     "ts-jest": "26.1.0",
     "typescript": "3.9.3",
     "vue-template-compiler": "2.6.11"
