--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -60,9 +60,9 @@
     "vue": "^2.6.11"
   },
   "dependencies": {
-    "@asd20/notifications-plugin-json": "^0.6.2",
-    "@asd20/notifications-shared": "^0.6.2",
-    "@asd20/notifications-ui": "^0.6.2",
+    "@asd20/notifications-plugin-json": "file:../plugin-json",
+    "@asd20/notifications-shared": "file:../shared",
+    "@asd20/notifications-ui": "file:../ui",
     "@vue/web-component-wrapper": "^1.2.0"
   },
   "husky": {
