--- a/packages/plugin-json/package.json
+++ b/packages/plugin-json/package.json
@@ -68,7 +68,7 @@
     ]
   },
   "dependencies": {
-    "@asd20/notifications-shared": "^0.6.2",
+    "@asd20/notifications-shared": "file:../shared",
     "lodash": "^4.17.15"
   },
   "gitHead": "42c70e88883d1e818582c016f46d9527082e7b25"
