--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -75,5 +75,8 @@
       "git add"
     ]
   },
-  "gitHead": "42c70e88883d1e818582c016f46d9527082e7b25"
+  "gitHead": "42c70e88883d1e818582c016f46d9527082e7b25",
+  "devDependencies": {
+    "@types/lodash": "^4.14.155"
+  }
 }
