--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@rollup/plugin-node-resolve": "^8.0.1",
     "@rollup/plugin-typescript": "3.1.1",
     "@types/jest": "25.2.3",
+    "@types/lodash": "^4.14.155",
     "@typescript-eslint/eslint-plugin": "3.1.0",
     "@typescript-eslint/parser": "3.1.0",
     "all-contributors-cli": "6.15.0",
