--- a/packages/embed/package.json
+++ b/packages/embed/package.json
@@ -47,10 +47,8 @@
     "test:watch": "jest --watch-all --collect-coverage -passWithNoTests",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "prepublishOnly": "npm run build",
-    "build": "rollup -c",
-    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/asd20-notifications-embed.umd.js",
-    "build:es": "rollup --config build/rollup.config.js --format es --file dist/asd20-notifications-embed.esm.js",
-    "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/asd20-notifications-embed.min.js"
+    "build": "rollup -c --environment BUILD:production",
+    "stats": "rollup-plugin-visualizer stats.json && npx http-server . -o stats.html"
   },
   "peerDependencies": {
     "vue": "^2.6.0"
@@ -73,8 +71,5 @@
       "git add"
     ]
   },
-  "gitHead": "42c70e88883d1e818582c016f46d9527082e7b25",
-  "devDependencies": {
-    "rollup-plugin-internal": "^1.0.4"
-  }
+  "gitHead": "42c70e88883d1e818582c016f46d9527082e7b25"
 }
