ci: enable dependabot automerge

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,4 +41,10 @@ jobs:
           npx lerna bootstrap --ci
           npx lerna run build
           npx auto shipit
-
+  automerge:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: fastify/github-action-merge-dependabot@v2.1.1
+        with:
+          github-token: ${{ secrets.GH_TOKEN }}
